--- a/DocumentationGenerator/DocumentationGenerator.csproj
+++ b/DocumentationGenerator/DocumentationGenerator.csproj
@@ -7,8 +7,18 @@
 
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Content Remove="Pages\Privacy.cshtml" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <Compile Remove="Pages\Privacy.cshtml.cs" />
     </ItemGroup>
 
 </Project>
