--- a/DocumentationGenerator/DocumentationGenerator.csproj
+++ b/DocumentationGenerator/DocumentationGenerator.csproj
@@ -7,6 +7,7 @@
 
 
     <ItemGroup>
+        <PackageReference Include="HtmlAgilityPack" Version="1.8.11" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     </ItemGroup>
